--- a/prometheus.yml
+++ b/prometheus.yml
@@ -2,6 +2,11 @@ global:
   scrape_interval: 15s # Intervalo de tiempo entre la captura de métricas
 
 scrape_configs:
-  - job_name: 'docker'
+  - job_name: 'cadvisor'
     static_configs:
-      - targets: ['docker-exporter:9323']  # Exportador de Docker
+      - targets: ['cadvisor:8080']
+
+  # Scraping de Docker Exporter
+  - job_name: 'docker-exporter'
+    static_configs:
+      - targets: ['docker-exporter:9323']
