--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -25,6 +25,20 @@ services:
     volumes:
       - mongo-data:/data/db # Volumen persistente para la base de datos
 
+  frontend:
+    image: "node:18-alpine" # Imagen base para Next.js
+    container_name: frontend
+    working_dir: /usr/src/frontend
+    volumes:
+      - ./frontend:/usr/src/frontend # Montar el código del frontend
+    ports:
+      - "3001:3000" # Exponer el frontend en el puerto 3001
+    command: sh -c "npm install && npm run dev" # Instalar dependencias y levantar el servidor de desarrollo
+    networks:
+      - jenkins-network
+    depends_on:
+      - app # Esperar a que el backend esté disponible
+
   prometheus:
     image: prom/prometheus:latest
     container_name: prometheus
@@ -47,7 +61,7 @@ services:
     image: grafana/grafana:latest
     container_name: grafana
     ports:
-      - "3001:3000"  # Exponer puerto 3001 para Grafana
+      - "3002:3000"  # Exponer puerto 3001 para Grafana
     networks:
       - jenkins-network
 
